--- a/pom.xml
+++ b/pom.xml
@@ -101,5 +101,10 @@
             <artifactId>commons-jcs-core</artifactId>
             <version>2.0-beta-1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
     </dependencies>
 </project>
